// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationGenerator multipleService aggregation of four maps 1`] = `
Object {
  "fileMeta": Object {
    "apiVersion": "1.1",
    "fileName": "file_aggregation_of_file1_and_file2_and_file1_and_file2",
    "projectName": "project_aggregation_of_Sample_Project_and_Sample_Project_and_Sample_Project_and_Sample_Project",
  },
  "map": Object {
    "attributes": Object {
      "customMetric": 14,
      "functions": 2460,
      "mcc": 426,
      "rloc": 860,
    },
    "children": Array [
      Object {
        "attributes": Object {
          "functions": 1010,
          "mcc": 11,
          "rloc": 170,
        },
        "children": Array [
          Object {
            "attributes": Object {
              "functions": 10,
              "mcc": 1,
              "rloc": 100,
            },
            "link": "http://www.google.de",
            "name": "big leaf",
            "path": "/root/file1/file1/file1/big leaf",
            "type": "File",
          },
          Object {
            "attributes": Object {
              "functions": 1000,
              "mcc": 10,
              "rloc": 70,
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "functions": 1000,
                  "mcc": 10,
                  "rloc": 70,
                },
                "name": "other small leaf",
                "path": "/root/file1/file1/file1/Parent Leaf/other small leaf",
                "type": "File",
              },
            ],
            "name": "Parent Leaf",
            "path": "/root/file1/file1/file1/Parent Leaf",
            "type": "Folder",
          },
        ],
        "name": "file1",
        "path": "/root/file1",
        "type": "Folder",
      },
      Object {
        "attributes": Object {
          "customMetric": 7,
          "functions": 220,
          "mcc": 202,
          "rloc": 260,
        },
        "children": Array [
          Object {
            "attributes": Object {
              "functions": 20,
              "mcc": 2,
              "rloc": 200,
            },
            "link": "http://www.google.de",
            "name": "big leaf",
            "path": "/root/file2/file2/file2/big leaf",
            "type": "File",
          },
          Object {
            "attributes": Object {
              "functions": 200,
              "mcc": 200,
              "rloc": 60,
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "functions": 200,
                  "mcc": 200,
                  "rloc": 60,
                },
                "name": "small leaf",
                "path": "/root/file2/file2/file2/Parent Leaf/small leaf",
                "type": "File",
              },
            ],
            "name": "Parent Leaf",
            "path": "/root/file2/file2/file2/Parent Leaf",
            "type": "Folder",
          },
        ],
        "name": "file2",
        "path": "/root/file2",
        "type": "Folder",
      },
      Object {
        "attributes": Object {
          "functions": 1010,
          "mcc": 11,
          "rloc": 170,
        },
        "children": Array [
          Object {
            "attributes": Object {
              "functions": 10,
              "mcc": 1,
              "rloc": 100,
            },
            "link": "http://www.google.de",
            "name": "big leaf",
            "path": "/root/file1/file1/file1/big leaf",
            "type": "File",
          },
          Object {
            "attributes": Object {
              "functions": 1000,
              "mcc": 10,
              "rloc": 70,
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "functions": 1000,
                  "mcc": 10,
                  "rloc": 70,
                },
                "name": "other small leaf",
                "path": "/root/file1/file1/file1/Parent Leaf/other small leaf",
                "type": "File",
              },
            ],
            "name": "Parent Leaf",
            "path": "/root/file1/file1/file1/Parent Leaf",
            "type": "Folder",
          },
        ],
        "name": "file1",
        "path": "/root/file1",
        "type": "Folder",
      },
      Object {
        "attributes": Object {
          "customMetric": 7,
          "functions": 220,
          "mcc": 202,
          "rloc": 260,
        },
        "children": Array [
          Object {
            "attributes": Object {
              "functions": 20,
              "mcc": 2,
              "rloc": 200,
            },
            "link": "http://www.google.de",
            "name": "big leaf",
            "path": "/root/file2/file2/file2/big leaf",
            "type": "File",
          },
          Object {
            "attributes": Object {
              "functions": 200,
              "mcc": 200,
              "rloc": 60,
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "functions": 200,
                  "mcc": 200,
                  "rloc": 60,
                },
                "name": "small leaf",
                "path": "/root/file2/file2/file2/Parent Leaf/small leaf",
                "type": "File",
              },
            ],
            "name": "Parent Leaf",
            "path": "/root/file2/file2/file2/Parent Leaf",
            "type": "Folder",
          },
        ],
        "name": "file2",
        "path": "/root/file2",
        "type": "Folder",
      },
    ],
    "name": "root",
    "path": "/root",
    "type": "Folder",
  },
  "settings": Object {
    "fileSettings": Object {
      "attributeTypes": Object {
        "edges": Object {},
        "nodes": Object {},
      },
      "blacklist": Blacklist {
        "blacklist": Array [],
      },
      "edges": Array [],
      "markedPackages": Array [],
    },
  },
}
`;

exports[`AggregationGenerator multipleService aggregation of two maps 1`] = `
Object {
  "fileMeta": Object {
    "apiVersion": "1.1",
    "fileName": "file_aggregation_of_file1_and_file2",
    "projectName": "project_aggregation_of_Sample_Project_and_Sample_Project",
  },
  "map": Object {
    "attributes": Object {
      "customMetric": 7,
      "functions": 1230,
      "mcc": 213,
      "rloc": 430,
    },
    "children": Array [
      Object {
        "attributes": Object {
          "functions": 1010,
          "mcc": 11,
          "rloc": 170,
        },
        "children": Array [
          Object {
            "attributes": Object {
              "functions": 10,
              "mcc": 1,
              "rloc": 100,
            },
            "link": "http://www.google.de",
            "name": "big leaf",
            "path": "/root/file1/big leaf",
            "type": "File",
          },
          Object {
            "attributes": Object {
              "functions": 1000,
              "mcc": 10,
              "rloc": 70,
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "functions": 1000,
                  "mcc": 10,
                  "rloc": 70,
                },
                "name": "other small leaf",
                "path": "/root/file1/Parent Leaf/other small leaf",
                "type": "File",
              },
            ],
            "name": "Parent Leaf",
            "path": "/root/file1/Parent Leaf",
            "type": "Folder",
          },
        ],
        "name": "file1",
        "path": "/root/file1",
        "type": "Folder",
      },
      Object {
        "attributes": Object {
          "customMetric": 7,
          "functions": 220,
          "mcc": 202,
          "rloc": 260,
        },
        "children": Array [
          Object {
            "attributes": Object {
              "functions": 20,
              "mcc": 2,
              "rloc": 200,
            },
            "link": "http://www.google.de",
            "name": "big leaf",
            "path": "/root/file2/big leaf",
            "type": "File",
          },
          Object {
            "attributes": Object {
              "functions": 200,
              "mcc": 200,
              "rloc": 60,
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "functions": 200,
                  "mcc": 200,
                  "rloc": 60,
                },
                "name": "small leaf",
                "path": "/root/file2/Parent Leaf/small leaf",
                "type": "File",
              },
            ],
            "name": "Parent Leaf",
            "path": "/root/file2/Parent Leaf",
            "type": "Folder",
          },
        ],
        "name": "file2",
        "path": "/root/file2",
        "type": "Folder",
      },
    ],
    "name": "root",
    "path": "/root",
    "type": "Folder",
  },
  "settings": Object {
    "fileSettings": Object {
      "attributeTypes": Object {
        "edges": Object {},
        "nodes": Object {},
      },
      "blacklist": Blacklist {
        "blacklist": Array [],
      },
      "edges": Array [],
      "markedPackages": Array [],
    },
  },
}
`;

exports[`AggregationGenerator multipleService aggregation one map 1`] = `
Object {
  "fileMeta": Object {
    "apiVersion": "1.1",
    "fileName": "file1",
    "projectName": "Sample Project",
  },
  "map": Object {
    "attributes": Object {
      "functions": 1010,
      "mcc": 11,
      "rloc": 170,
    },
    "children": Array [
      Object {
        "attributes": Object {
          "functions": 10,
          "mcc": 1,
          "rloc": 100,
        },
        "link": "http://www.google.de",
        "name": "big leaf",
        "path": "/root/file1/file1/file1/big leaf",
        "type": "File",
      },
      Object {
        "attributes": Object {
          "functions": 1000,
          "mcc": 10,
          "rloc": 70,
        },
        "children": Array [
          Object {
            "attributes": Object {
              "functions": 1000,
              "mcc": 10,
              "rloc": 70,
            },
            "name": "other small leaf",
            "path": "/root/file1/file1/file1/Parent Leaf/other small leaf",
            "type": "File",
          },
        ],
        "name": "Parent Leaf",
        "path": "/root/file1/file1/file1/Parent Leaf",
        "type": "Folder",
      },
    ],
    "name": "root",
    "path": "/root",
    "type": "Folder",
  },
  "settings": Object {},
}
`;
